# zombie-arena-protocol

./: .gitignore  BRANDING.md  DEPLOYMENT.md  GITHUB_SETUP.md  LAUNCH_NOW.md  QUICKSTART.md  README.md  VERCEL_DEPLOYMENT.md  docker-compose.yml  launch-game.sh  package-lock.json  package.json  setup-github.sh
.github/workflows/: deploy.yml  local-dev.yml
backend/: .env.example  Dockerfile  package.json
backend/src/: server.ts
backend/src/game/: GameRoom.ts  types.ts
contracts/: Anchor.toml
contracts/programs/zombie-arena-protocol/: Cargo.toml
contracts/programs/zombie-arena-protocol/src/: lib.rs  nft.rs  tournament.rs
contracts/zap-protocol/: Anchor.toml
contracts/zap-protocol/programs/zap-protocol/: Cargo.toml
contracts/zap-protocol/programs/zap-protocol/src/: lib.rs
game-engine/: package.json
game-engine/src/core/: GameEngine.ts  Player.ts
game-engine/src/zombies/: Zombie.ts  ZombieManager.ts
scripts/: initialize-token.ts  setup-local.sh  stop-local.sh
tests/: package.json  playwright.config.ts
tests/e2e/: blockchain-integration.spec.ts  game-mechanics.spec.ts  wallet-connection.spec.ts
